--- a/node-electron/package.json
+++ b/node-electron/package.json
@@ -5,11 +5,13 @@
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-packager . nodeElectron --win --out ../NodeElectron --arch=x64 --app-version=1.0.0 --electron-version=2.0.2"
   },
   "author": "dcs v9",
   "license": "ISC",
   "dependencies": {
-    "electron": "^2.0.2"
+    "electron": "^2.0.2",
+    "electron-rebuild": "^1.7.3"
   }
 }
