--- a/node-client/src/main/resources/application.properties
+++ b/node-client/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.servlet.path=/node
 
 web.socket.server.type=NODE
 web.socket.server.id=1001
-web.socket.server.uri=ws://localhost:8080/webSocket
+web.socket.server.uri=ws://localhost:8080/webSocket?user=dcs&pwd=dcs01
